registration end point updated

--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -5,6 +5,6 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-venu-sandbox.apps.pikes.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-venu.apps.pikes.pal.pivotal.io
   services:
   - tracker-timesheets-database
