--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -4,7 +4,6 @@ applications:
   host: allocations-pal-venu
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-venu.apps.pikes.pal.pivotal.io
   services:
   - tracker-allocations-database
+  - tracker-service-registry
