--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -4,7 +4,6 @@ applications:
   host: timesheets-pal-venu
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-venu.apps.pikes.pal.pivotal.io
   services:
   - tracker-timesheets-database
+  - tracker-service-registry
